--- a/style.css
+++ b/style.css
@@ -1,58 +1,9 @@
-body {
-    font-family: 'Arial', sans-serif;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background: linear-gradient(to right, #7549c7, #ACB6E5);
-    color: #333;
-  }
-  
-  #tic-tac-toe-board {
-    display: grid;
-    grid-template-columns: repeat(3, 100px);
-    grid-template-rows: repeat(3, 100px);
-    gap: 10px;
-  }
-  
-  .cell {
-    background-color: #fff;
-    border: 2px solid #333;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2rem;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    width: 100px;
-    height: 100px;
-  }
-  
-  .cell:hover {
-    background-color: #e3e3e3;
-  }
-  
-  .game-message {
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    font-size: 20px;
-    color: #000000;
-  }
-  
-  #resetButton {
-    padding: 10px 20px;
-    font-size: 1rem;
-    color: #fff;
-    background-color: #333;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-  }
-  
-  #resetButton:hover {
-    background-color: #555;
-  }
+.header {
+
+}
+.conteiner {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
+}
